# cpp-project-template

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
gtest/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
